# argus

./: .gitignore  README.md  extraction_rules.yaml  pyproject.toml  sources.yaml
.github/workflows/: test.yml
docs/: DECISIONS.md  MVP.md  ROADMAP.md  SCOPE.md  VISION.md
reports/: 2026-07-21.md
research/climate-tech/: README.md
src/: README.md
src/argus/: __init__.py  __main__.py  collector.py  config.py  database.py  extraction.py  http.py  models.py  normalize.py  report.py
tests/: test_collector.py  test_database.py  test_evidence_report.py  test_extraction.py  test_http.py  test_normalize.py  test_report.py
