[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-climate"
version = "0.2.0"
description = "RSS collection and deterministic evidence extraction for climate-tech research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0,<7",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
